Make fixed positioning code check for NS_AUTOOFFSET to fix positioning of auto-sized fixed positioned elements relative to bottom or right.  b=98579  r=waterson  sr=attinasi